// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notification Alternate Colours 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="Notification__Wrapper-sc-1p26rkq-0 bGnaeg"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 jeGvSx"
        color="white"
        fontSize="2"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
      <p
        className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
      >
        Green notification for good/successful notifications, e.g. Details updated successfully!
      </p>
      <button
        className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
          color="white"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="Notification__Wrapper-sc-1p26rkq-0 gsrXZE"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 jeGvSx"
        color="white"
        fontSize="2"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
      <p
        className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
      >
        Yellow warning notification e.g. This may take a few minutes to update.
      </p>
      <button
        className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
          color="white"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
      </button>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fkJFNa"
  >
    <div
      className="Notification__Wrapper-sc-1p26rkq-0 gsrXZE"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 jeGvSx"
        color="white"
        fontSize="2"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
      <p
        className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
      >
        Red error notification e.g. Update failed! Please try again.
      </p>
      <button
        className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
          color="white"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Basic 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 dfSdKy"
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 jeGvSx"
      color="white"
      fontSize="2"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      Default notification message for messages that are not super important, e.g. Link shared.
    </p>
    <button
      className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
        color="white"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Close Disabled 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 dfSdKy"
  >
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      Closing this notification is disabled, this should be used for persistant notifications e.g. Stage 1 is now locked and is read-only.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Floating 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 hPAMrJ floating"
  >
    <span
      className="Icon__IconWrapper-xeqnbo-0 jeGvSx"
      color="white"
      fontSize="2"
    >
      <svg
        className="svg-inline--fa fa-undefined"
      />
    </span>
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      Floating notification.
    </p>
    <button
      className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
        color="white"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Floating and Centered 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 inrlWm floating centered"
  >
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      Centered notification
    </p>
    <button
      className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
        color="white"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Notification In Progress/Loading 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 dfSdKy"
  >
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      <div
        className="sc-AxjAm eFwvwZ"
        data-testid={null}
      >
        <div
          className="Loading__LoadingWrapper-sc-195w3kf-0 bMqJvP"
        >
          <div
            className="Loading__Item-sc-195w3kf-1 jqyRqE"
          />
        </div>
        <span>
          In progress notification with disabled close. E.g. Importing data...
        </span>
      </div>
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Notification Text-only 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 iUnXLf"
  data-testid={null}
>
  <div
    className="Notification__Wrapper-sc-1p26rkq-0 dfSdKy"
  >
    <p
      className="Notification__NotificationContent-sc-1p26rkq-1 gRHNOG"
    >
      Text-only notification
    </p>
    <button
      className="Notification__Close-sc-1p26rkq-2 iOUGRU close-button"
      onClick={[Function]}
      tabIndex="0"
    >
      <span
        className="Icon__IconWrapper-xeqnbo-0 hrqhCG"
        color="white"
      >
        <svg
          className="svg-inline--fa fa-undefined"
        />
      </span>
    </button>
  </div>
</div>
`;
